added printout of height in the span next to the slider

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <label>How High?</label>
         <input type="range" id="height-slider" min="1" max="20" step="1"/>
-        <span id="range-value">2</span>
+        <span id="range-value"></span>
       </div>
 
       <pre id="pyramid"></pre>
